added search input to header and added styling

--- a/src/features/header.css
+++ b/src/features/header.css
@@ -18,3 +18,25 @@ header .logo-icon {
   font-size: 3rem;
   padding: 10px;
 }
+
+.search {
+  display: flex;
+  align-items: center;
+  margin-left: 15px;
+}
+.search input {
+  flex-grow: 1;
+  background-color: rgb(54, 54, 60);
+  border: none;
+  padding: 5px;
+  height: max-content;
+  border-radius: 3px;
+}
+
+.search button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: rgb(216, 216, 217);
+  font-size: 1.5rem;
+}
