added css to avatar and imported react animated

--- a/src/features/Home/Home.css
+++ b/src/features/Home/Home.css
@@ -7,11 +7,11 @@
 
 .error button {
   background-color: rgb(54, 54, 60);
-
+  background: rgb(33, 33, 36);
   color: rgb(216, 216, 217);
   border: none;
   border-radius: 5px;
   font-size: 1rem;
-  padding: 2px, 4px;
+  padding: 8px, 16px;
   cursor: pointer;
 }
