--- a/src/features/Subreddits/Subreddits.css
+++ b/src/features/Subreddits/Subreddits.css
@@ -1,10 +1,10 @@
 .subreddit-card {
-  padding-right: 2px;
+  padding-right: var(--spacing-2);
 }
 
 .subreddit-card h2 {
   margin-top: 0;
-  color: rgb(216, 216, 217);
+  color: var(--color-text-header);
 }
 
 .subreddit-card button {
@@ -12,25 +12,25 @@
   border: none;
   display: flex;
   align-items: center;
-  color: rgb(216, 216, 217);
+  color: var(--color-text-body);
   font-weight: 600;
   cursor: pointer;
   width: 100%;
-  padding: 2px;
-  border-radius: 5px;
+  padding: var(--spacing-2);
+  border-radius: var(--radius);
 }
 
 .selected-subreddit button {
-  color: rgb(216, 216, 217) !important;
+  color: var(--color-branding) !important;
 }
 
 .selected-subreddit {
-  border-left: 5px solid;
-  background: rgb(54, 54, 60);
+  border-left: 5px solid var(--color-branding);
+  background: var(--color-branding-transparent);
 }
 
 .subreddit-card button:hover {
-  background-color: rgb(54, 54, 60);
+  background: var(--color-on-hover);
 }
 
 .subreddits-list {
@@ -42,5 +42,5 @@
   height: 25px;
   width: 25px;
   border-radius: 50%;
-  margin-right: 1px;
+  margin-right: var(--spacing-1);
 }
