--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -4,6 +4,7 @@ header .logo {
   grid-column: 1/2;
   display: flex;
   align-items: center;
+  font-size: 2rem;
 }
 
 header {
@@ -16,8 +17,8 @@ header {
 
 header .logo-icon {
   grid-column: 2/3;
-  margin-right: var(--spacing-1);
-  font-size: 2rem;
+  margin-right: var(--spacing-2);
+  font-size: 3rem;
 }
 
 .search {
@@ -39,6 +40,7 @@ header .logo-icon {
   background: none;
   border: none;
   cursor: pointer;
-  color: var(--color-text-secondary);
+  color: var(--color-branding);
   font-size: 1.5rem;
+  padding-top: var(--spacing-1);
 }
