--- a/src/features/Subreddits/Subreddits.css
+++ b/src/features/Subreddits/Subreddits.css
@@ -1,10 +1,12 @@
 .subreddit-card {
   padding-right: var(--spacing-2);
+  background-color: var(--color-background);
 }
 
 .subreddit-card h2 {
   margin-top: 0;
-  color: var(--color-text-header);
+  color: var(--color-branding);
+  font-size: 2rem;
 }
 
 .subreddit-card button {
@@ -18,6 +20,7 @@
   width: 100%;
   padding: var(--spacing-2);
   border-radius: var(--radius);
+  font-size: 1rem;
 }
 
 .selected-subreddit button {
@@ -43,4 +46,8 @@
   width: 25px;
   border-radius: 50%;
   margin-right: var(--spacing-1);
+}
+
+h2 {
+  padding-left: 1rem;
 }
