--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -3,7 +3,7 @@
 }
 
 .post-container {
-  width: 100%;
+  width: 90%;
 }
 
 .post-details {
@@ -33,8 +33,10 @@
 
 .post-title {
   margin: 0;
+  padding-top: var(--spacing-1);
   margin-bottom: var(--spacing-3);
   color: var(--color-text-header);
+  font-size: 2rem;
 }
 
 .post-votes-container {
