--- a/src/features/Comment/Comment.css
+++ b/src/features/Comment/Comment.css
@@ -4,6 +4,7 @@
   padding: var(--spacing-2);
   transition: box-shadow 0.1s ease-in;
   border-radius: var(--border-radius);
+  color: var(--color-foreground);
 }
 
 .comment:hover {
@@ -14,6 +15,7 @@
   display: flex;
   margin-bottom: var(--spacing-2);
   align-items: center;
+  color: var(--color-foreground);
 }
 
 .comment-created-time {
