--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -8,7 +8,7 @@
 
 .post-details {
   margin-top: var(--spacing-2);
-  border-top: 2px solid var(--color-border);
+  border-top: 1px solid var(--color-border);
   padding-top: var(--spacing-1);
   font-size: 0.75rem;
   display: flex;
@@ -33,10 +33,8 @@
 
 .post-title {
   margin: 0;
-  padding-top: var(--spacing-1);
-  margin-bottom: var(--spacing-3);
+  margin-bottom: var(--spacing-2);
   color: var(--color-text-header);
-  font-size: 2rem;
 }
 
 .post-votes-container {
@@ -86,15 +84,15 @@
   background: none;
   border: none;
   cursor: pointer;
-  color: rgb(216, 216, 217);
+  color: var(--color-text-secondary);
   padding: 0;
   display: flex;
   align-items: center;
-  border-radius: 5px;
+  border-radius: var(--radius);
 }
 
 .icon-action-button:hover {
-  background: rgb(54, 54, 60);
+  background: var(--color-on-hover);
 }
 
 .post-comments-container {
@@ -103,7 +101,7 @@
 }
 
 .post-comments-container .icon-action {
-  margin-right: 0px;
+  margin-right: var(--spacing-0);
 }
 
 .author-details {
@@ -112,5 +110,5 @@
 }
 
 .showing-comments {
-  color: rgb(216, 216, 217);
+  color: var(--color-branding);
 }
