--- a/src/features/Post/PostLoading.css
+++ b/src/features/Post/PostLoading.css
@@ -4,7 +4,7 @@
 
 .post {
   display: flex;
-  background: var(--color-foreground);
+  background: var(--color-background);
   box-shadow: var(--box-shadow);
   margin-bottom: var(--spacing-4);
   border-radius: var(--radius);
