--- a/src/features/Subreddits/Subreddits.css
+++ b/src/features/Subreddits/Subreddits.css
@@ -1,6 +1,7 @@
 .subreddit-card {
   padding-right: var(--spacing-2);
   background-color: var(--color-background);
+  margin-right: var(--spacing-2);
 }
 
 .subreddit-card h2 {
@@ -20,7 +21,7 @@
   width: 100%;
   padding: var(--spacing-2);
   border-radius: var(--radius);
-  font-size: 1rem;
+  font-size: 1.5vw;
 }
 
 .selected-subreddit button {
