--- a/src/features/Subreddits/Subreddits.css
+++ b/src/features/Subreddits/Subreddits.css
@@ -7,7 +7,7 @@
 .subreddit-card h2 {
   margin-top: 0;
   color: var(--color-branding);
-  font-size: 2rem;
+  font-size: 2.2vw;
 }
 
 .subreddit-card button {
@@ -43,8 +43,8 @@
 }
 
 .subreddit-icon {
-  height: 25px;
-  width: 25px;
+  height: 2.3vw;
+  width: 2.3vw;
   border-radius: 50%;
   margin-right: var(--spacing-1);
 }
